@@ -155,6 +155,12 @@ class tx_dam_cmd_folderdelete extends t3lib_extobjbase {
 			}
 			$msg[] = sprintf($LANG->sL('LLL:EXT:lang/locallang_core.xml:mess.delete',1),$this->folder['dir_path_relative']);
 
+			if (tx_dam::config_checkValueEnabled('mod.txdamM1_SHARED.displayExtraButtons', 1)) {
+				$buttons = '
+					<input type="submit" value="'.$LANG->sL('LLL:EXT:lang/locallang_core.xml:cm.delete',1).'" />
+					<input type="submit" value="'.$LANG->sL('LLL:EXT:lang/locallang_core.xml:labels.cancel',1).'" onclick="jumpBack(); return false;" />';
+			}
+
 			$this->pObj->docHeaderButtons['SAVE'] = '<input class="c-inputButton" name="_savedok"' . t3lib_iconWorks::skinImg($this->pObj->doc->backPath, 'gfx/deletedok.gif') . ' title="' . $LANG->sL('LLL:EXT:lang/locallang_core.xml:cm.delete',1) . '" height="16" type="image" width="16">';
 			$this->pObj->docHeaderButtons['CLOSE'] = '<a href="#" onclick="jumpBack(); return false;"><img' . t3lib_iconWorks::skinImg($this->pObj->doc->backPath, 'gfx/closedok.gif') . ' class="c-inputButton" title="'.$LANG->sL('LLL:EXT:lang/locallang_core.xml:labels.cancel',1).'" alt="" height="16" width="16"></a>';			
 
