@@ -187,6 +187,7 @@ class tx_dam_edit_text extends tx_dam_editorBase {
 	function renderForm($fileContent='')	{
 		global $BE_USER, $LANG, $TYPO3_CONF_VARS;
 
+		$content = '';
 		$msg = array();
 
 		$this->pObj->markers['FOLDER_INFO'] = tx_dam_guiFunc::getFolderInfoBar(tx_dam::path_compileInfo($this->pObj->media->pathAbsolute));
@@ -203,7 +204,16 @@ class tx_dam_edit_text extends tx_dam_editorBase {
         $this->pObj->docHeaderButtons['SAVE_CLOSE'] = '<input class="c-inputButton" name="_saveandclosedok"' . t3lib_iconWorks::skinImg($this->pObj->doc->backPath, 'gfx/saveandclosedok.gif') . ' title="' . $GLOBALS['LANG']->getLL('labelCmdSaveClose',1) . '" height="16" type="image" width="16">';
         $this->pObj->docHeaderButtons['CLOSE'] = '<a href="#" onclick="jumpBack(); return false;"><img' . t3lib_iconWorks::skinImg($this->pObj->doc->backPath, 'gfx/closedok.gif') . ' class="c-inputButton" title="'.$LANG->sL('LLL:EXT:lang/locallang_core.xml:labels.cancel',1).'" alt="" height="16" width="16"></a>';
 
-		return implode('<br />', $msg);
+		if (tx_dam::config_checkValueEnabled('mod.txdamM1_SHARED.displayExtraButtons', 1)) {
+			$buttons = '
+				<input type="submit" name="save" value="'.$GLOBALS['LANG']->getLL('labelCmdSave',1).'" />
+				<input type="submit" name="_saveandclosedok_x" value="'.$GLOBALS['LANG']->getLL('labelCmdSaveClose',1).'" />
+				<input type="submit" value="'.$LANG->sL('LLL:EXT:lang/locallang_core.xml:labels.cancel',1).'" onclick="jumpBack(); return false;" />';
+		}
+
+		$content .= $GLOBALS['SOBE']->getMessageBox ($GLOBALS['SOBE']->pageTitle, $msg, $buttons, 1);
+
+		return $content;
 	}
 }
 
