@@ -1,3 +1,7 @@
+2009-07-21  Michiel Roos <michiel@netcreators.com>
+
+	* #10194: Cannot confirm "delete file" operation
+	 
 2009-07-14  Dan Osipov  <dosipov@phillyburbs.com>
 
 	* #10556: Flexible media types
